--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -9,6 +9,7 @@ services:
     #   context: .
     #   dockerfile: base.Dockerfile
     container_name: kafka
+    hostname: kafka
     command: kafka-kraft
     ports:
       - target: 9092
