--- a/kafka.env
+++ b/kafka.env
@@ -2,9 +2,9 @@
 CONF_KRAFT_SERVER_process_roles=broker,controller
 CONF_KRAFT_SERVER_node_id=1
 CONF_KRAFT_SERVER_controller_quorum_voters=1@localhost:9093
-CONF_KRAFT_SERVER_listeners=PLAINTEXT://:9092,CONTROLLER://:9093
+CONF_KRAFT_SERVER_listeners=PLAINTEXT://0.0.0.0:9092,CONTROLLER://:9093
 CONF_KRAFT_SERVER_inter_broker_listener_name=PLAINTEXT
-CONF_KRAFT_SERVER_advertised_listeners=PLAINTEXT://localhost:9092
+CONF_KRAFT_SERVER_advertised_listeners=PLAINTEXT://:9092
 CONF_KRAFT_SERVER_controller_listener_names=CONTROLLER
 CONF_KRAFT_SERVER_listener_security_protocol_map=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,SSL:SSL,SASL_PLAINTEXT:SASL_PLAINTEXT,SASL_SSL:SASL_SSL
 CONF_KRAFT_SERVER_num_network_threads=3
