--- a/docker-compose-kraft.yaml
+++ b/docker-compose-kraft.yaml
@@ -23,6 +23,9 @@ services:
       - type: volume
         source: kafka-volume
         target: /tmp/logs
+    environment:
+      # 16 bytes of a base64-encoded UUID
+      KAFKA_CLUSTER_ID: "OiY16813QnOWGJwZ9eX0YQ"
     networks:
       - main-network
     env_file:
