--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -29,6 +29,12 @@ services:
       - main-overlay-network
     env_file:
       - ${APPS_ENV}/kafka.env
+    healthcheck:
+      test: ["CMD", "nc", "-vz", "localhost", "9092"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     restart: always
 
 
