feat: add label to restart unhealthy containers
When starting a willfarrell/autoheal container, unhealthy containers marked with the autoheal label will be automatically restarted.

--- a/docker-compose-kraft.yaml
+++ b/docker-compose-kraft.yaml
@@ -12,6 +12,8 @@ services:
     container_name: kafka
     hostname: kafka
     command: kafka-kraft
+    labels:
+      autoheal: 'true'
     ports:
       - target: 9092
         published: 9092
