--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -11,6 +11,8 @@ services:
     container_name: kafka
     hostname: kafka
     command: kafka-kraft
+    labels:
+      autoheal: 'true'
     ports:
       - target: 9092
         published: 9092
